<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FingerNotes</string>
    <string name="service_details">Tap the exit button to remove notification</string>
    <string name="menu_settings">Menu settings</string>
    <string name="mmenu_extended">New note</string>
    <string name="mmenu_viewnotes">View notes</string>
    <string name="mmenu_settings">Settings</string>
    <string name="mmenu_rate">Rate</string>
    <string name="mmenu_exit">Exit</string>
    <string name="title_activity_menu">Finger Notes</string>
    <string name="title_activity_paint">Your Note</string>
    <string name="title_activity_view_notes">View notes</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_newmode">New note</string>
    <string name="title_activity_editmode">Edit note</string>
    <string name="edit_save_note_title">Title for your note</string>
    <string name="edit_save_note_notificationcb">Activate notification</string>
    <string name="edit_save_note_alarmmodes_prompt">Choose a note notification</string>
    <string name="settings_ctrl_orientation">Right-align controls</string>
    <string name="settings_prefer_storage">Prefer internal storage</string>
    <string name="settings_import_from_fn">Import notes from free FN</string>
    <string name="viewnotes_prev">&lt;</string>
    <string name="viewnotes_next">></string>
    <string name="app_save_btn">Save</string>
    <string name="app_cancel_btn">Cancel</string>
    <string name="app_delete_btn">Delete</string>
    <string name="message_cant_save_note">"Can't save your note"</string>
    <string name="message_save_note">Your note is saved</string>
    <string name="message_file_not_found">"Note's file not found"</string>
</resources>
