<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@layout/app_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBox android:id="@id/settingsCtrlOrientationCbx" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_ctrl_orientation" style="@style/MiddleText" />
    <CheckBox android:id="@id/settingsPreferStorageCbx" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_prefer_storage" style="@style/MiddleText" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/settingsSaveBtn" android:background="@layout/orange_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_save_btn" android:layout_weight="2.0" style="@style/MiddleButton" />
        <Button android:id="@id/settingsCancelBtn" android:background="@layout/orange_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_cancel_btn" android:layout_weight="2.0" style="@style/MiddleButton" />
    </LinearLayout>
</LinearLayout>