<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@layout/app_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/topControls" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <Button android:id="@id/viewNotePrevBtn" android:background="@layout/orange_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/viewnotes_prev" android:layout_weight="2.0" style="@style/LargeButton" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/viewNotePageNum" android:layout_width="wrap_content" android:layout_height="fill_parent" android:ems="5" style="@style/MiddleText" />
        <Button android:id="@id/viewNoteNextBtn" android:background="@layout/orange_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/viewnotes_next" android:layout_weight="2.0" style="@style/LargeButton" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/bottomControls" android:layout_below="@id/topControls">
        <ListView android:id="@id/notesListView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@drawable/notes_list_selector" android:divider="#ffb5b5b5" android:dividerHeight="1.0dip" />
    </LinearLayout>
    <LinearLayout android:id="@id/bottomControls" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@id/viewNoteDeleteBtn" android:background="@layout/orange_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_delete_btn" android:layout_weight="2.0" style="@style/MiddleButton" />
        <Button android:id="@id/viewNoteCancelBtn" android:background="@layout/orange_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_cancel_btn" android:layout_weight="2.0" style="@style/MiddleButton" />
    </LinearLayout>
</RelativeLayout>